--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 #include README.rst
 
 # Include the data files
-include   e3enrich/E3dict.csv
-include   e3enrich/unigenedict.csv
+include   ube3_apa/E3dict.csv
+include   ube3_apa/unigenedict.csv
